tests/baselines/reference/tsxElementResolution17.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== consumer.tsx (0 errors) ====
    ///<reference path="file.tsx" />
    // Should keep s1 and elide s2
    import s1 = require('elements1');
    import s2 = require('elements2');
    <s1.MyElement />;
    
==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    declare module 'elements1' {
    	class MyElement {
    
    	}
    }
    
    declare module 'elements2' {
    	class MyElement {
    
    	}
    }
    